--- a/main.css
+++ b/main.css
@@ -1,3 +1,21 @@
 body {
   background-color: black;
+  background-image: url(images/bg.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+#logo {
+  width: 80%;
+}
+
+p {
+  margin: 0;
+  color: black;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 1.5rem;
+  text-shadow: 0 0 5px red;
 }
